--- a/style.css
+++ b/style.css
@@ -19927,7 +19927,7 @@ ul.prf_list li {
 
 .device3 {
   margin: 0;
-  padding: 0px 0 25px 0!important;
+  padding: 0px 0 25px 0 !important;
   text-align: center;
 }
 
@@ -20013,7 +20013,7 @@ ul.prf_list li {
 
   .device3 {
     margin: 0;
-    padding: 10px 0px 65px 0px!important;
+    padding: 10px 0px 65px 0px !important;
     text-align: center;
   }
 
@@ -20033,7 +20033,7 @@ ul.prf_list li {
   }
 
   .device3 img {
-    width: 62%!important;
+    width: 62% !important;
   }
 
 
@@ -21106,7 +21106,7 @@ ul {
 
   .bg_white {
     background-color: #fff;
-    padding: 0px!important;
+    padding: 0px !important;
   }
 
   .bg02 {
@@ -21117,27 +21117,42 @@ ul {
     text-align: center;
     font-weight: bolder;
     color: #380505;
-    font-size: 14px!important;
-    padding-bottom: 40px!important;
+    font-size: 14px !important;
+    padding-bottom: 40px !important;
   }
 
   .bg03 {
     background-color: #fff !important;
-    padding: 40px 0 20px 0!important;
+    padding: 40px 0 20px 0 !important;
   }
 
   .form_bg {
-    background-color: #f8f7f1!important;
-    margin: 0px!important;
-    padding: 10px 0 50px 0!important;
+    background-color: #f8f7f1 !important;
+    margin: 0px !important;
+    padding: 10px 0 50px 0 !important;
   }
 
-    .regist_form {
-      margin: 0 5%!important;
-      border: double!important;
-      padding: 2%!important;
-      background-color: #fff!important;
-    }
+  .regist_form {
+    margin: 0 5% !important;
+    border: double !important;
+    padding: 2% !important;
+    background-color: #fff !important;
+  }
+
+  .button_solid007 {
+    text-align: center;
+    padding: 35px 0 13px 0!important;
+  }
+
+  .button_solid007 p {
+    font-size: 15px!important;
+  }
+
+  .button_solid007 p:before,
+  .button_solid007 p:after {
+    margin: 0px 0px!important;
+    width: 28px!important;
+  }
 }
 
 .bg_white {
@@ -21150,7 +21165,7 @@ ul {
 }
 
 .bg03 {
-  background-color: #fff!important;
+  background-color: #fff !important;
   padding: 60px 0 30px 0;
 }
 
@@ -21187,4 +21202,79 @@ ul {
 
 html {
   scroll-behavior: smooth;
+}
+
+.wrap {
+  overflow: hidden;
+}
+
+.button_solid007 p {
+  margin-bottom: 5px;
+  font-weight: 600;
+  color: #db7908;
+  letter-spacing: 0.04rem;
+  display: inline-block;
+  position: relative;
+}
+
+.button_solid007 p:before {
+  left: -30px;
+  -webkit-transform: rotate(50deg);
+  transform: rotate(50deg);
+}
+
+.button_solid007 p:before,
+.button_solid007 p:after {
+  display: inline-block;
+  position: absolute;
+  top: 45%;
+  width: 20px;
+  height: 3px;
+  border-radius: 5px;
+  background-color: #23B802;
+  content: "";
+}
+
+.button_solid007 p:after {
+  right: -30px;
+  -webkit-transform: rotate(-50deg);
+  transform: rotate(-50deg);
+}
+
+.button_solid007 p:before,
+.button_solid007 p:after {
+  display: inline-block;
+  position: absolute;
+  top: 45%;
+  margin: 0px -10px;
+  width: 35px;
+  height: 3px;
+  border-radius: 5px;
+  background-color: #23B802;
+  content: "";
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.button_solid007 p {
+  margin-bottom: 5px;
+  font-weight: 600;
+  color: #23B802;
+  letter-spacing: 0.04rem;
+  display: inline-block;
+  position: relative;
+  font-size: 30px;
+}
+
+.button_solid007 {
+  text-align: center;
+  padding: 35px 0 13px 0;
+}
+
+.copy_color {
+  color: #F7FA0B;
 }
