--- a/style.css
+++ b/style.css
@@ -19927,7 +19927,7 @@ ul.prf_list li {
 
 .device3 {
   margin: 0;
-  padding: 0px 0 15px 0 !important;
+  padding: 0px 0 5px 0 !important;
   text-align: center;
 }
 
@@ -20013,7 +20013,7 @@ ul.prf_list li {
 
   .device3 {
     margin: 0;
-    padding: 10px 0px 35px 0px !important;
+    padding: 10px 0px 25px 0px !important;
     text-align: center;
   }
 
@@ -21141,11 +21141,11 @@ ul {
 
   .button_solid007 {
     text-align: center;
-    padding: 0px 0 13px 0!important;
+    padding: 0px 0 13px 0 !important;
   }
 
   .button_solid007 p {
-    font-size: 13px!important;
+    font-size: 11px !important;
   }
 }
 
@@ -21205,7 +21205,7 @@ html {
 .button_solid007 p {
   margin-bottom: 5px;
   font-weight: 600;
-  color: #404040;
+  color: #3f3f3f;
   letter-spacing: 0rem;
   display: inline-block;
   position: relative;
@@ -21220,11 +21220,11 @@ html {
 .button_solid007 p {
   margin-bottom: 5px;
   font-weight: 600;
-  color: #404040;
+  color: #3f3f3f;
   letter-spacing: 0rem;
   display: inline-block;
   position: relative;
-  font-size: 20px;
+  font-size: 17px;
 }
 
 .button_solid007 {
