--- a/style.css
+++ b/style.css
@@ -21183,9 +21183,12 @@ ul {
 
 .regist_form {
   margin: 0 7%;
-  border: double;
   padding: 3%;
   background-color: #fff;
+  font-weight: bold;
+  border: solid 8px #F36501;
+  border-radius: 20px;
+    /*角の丸み*/
 }
 
 .form_bg {
@@ -21234,4 +21237,74 @@ html {
 
 .copy_color {
   color: #F7FA0B;
+}
+
+form.myForm .required .my_column.my_left label:first-child:after,
+form.myForm th.required label:first-child:after,
+form.myForm span.required:after {
+  color: white;
+  content: '必須';
+  display: inline-block;
+  width: 42px!important;
+  height: 28px!important;
+  vertical-align: middle;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #e32;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 5px;
+  margin-right: 0px;
+  padding-top: 0.1em;
+  padding-bottom: 0.2em;
+  padding-left: 4px;
+  padding-right: 4px;
+  text-align: center;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+}
+
+input[type="submit"],
+input[type="button"] {
+  background: #eee;
+  border-radius: 3px;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+  /* max-width: 280px; */
+  padding: 10px 25px;
+  color: #313131;
+  transition: 0.3s ease-in-out;
+  font-weight: 500;
+  height: 60px!important;
+  width: 400px!important;
+  border-radius: 0;
+  color: #fff;
+  appearance: button;
+  box-sizing: border-box;
+  cursor: pointer;
+  webkit-transition: all .5s;
+  transition: all .5s;
+  background: #ffa000;
+  border: none;
+  border-radius: 50px;
+  background: linear-gradient(to right, #26CA01, #1BA200)!important;
+  font-family: 'Yu Gothic Medium', '游ゴシック Medium', YuGothic, '游ゴシック体', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', sans-serif;
+  font-size: 22px;
+  font-weight: bolder;
+  }
+
+
+input[type="submit"]:hover {
+  opacity: 0.7!important;
+  color: #FFF!important;
+}
+
+
+
+input[type="submit"]:hover:after {
+  border-color: #FFF;
 }
